test/org/midica/testfiles/failing/eff-flow-pending-4.midica
INCLUDE inc/instruments.midica



FUNCTION func
	{
		{
			0: hold.wait
			
			0: c
			
		}
	}
END

{
	{
		
		CALL func
		0: a
		
	}
}

